--- a/LogSearcher/Views/MainWindow.xaml
+++ b/LogSearcher/Views/MainWindow.xaml
@@ -85,6 +85,8 @@
                 <!-- Heading & Add button-->
                 <StackPanel Orientation="Horizontal">
                     <TextBlock FontWeight="Bold">Source folder:</TextBlock>
+                    <Button Margin="5 0 0 0" MinWidth="30"
+                        Command="{Binding OpenSourceFolderButton}">...</Button>
                     <Button Margin="5 0 0 0"                           
                         Command="{Binding SubmitSourceFolderButton}">Add</Button>
                 </StackPanel>
@@ -93,21 +95,31 @@
                 <StackPanel Orientation="Horizontal">
                     <TextBox Text="{Binding Path=InputSourceFolder, Mode=TwoWay}"
                              MinWidth="200"/>
-                    <Button Margin="5 0 0 0"
-                        Command="{Binding OpenSourceFolderButton}">...</Button>
+                    
                 </StackPanel>
 
                 <!-- HistoryDrop & UseHist button-->
-                <StackPanel Orientation="Horizontal" Margin="0 10">
+                <StackPanel Orientation="Vertical" Margin="0 10 0 0">
+                    <TextBlock Text="Folder History:" FontWeight="Bold"/>
                     <ComboBox x:Name="History" 
                     ItemsSource="{Binding Path=DirectoryHistory}"
                     DisplayMemberPath="DirectoryName"
                               MinWidth="200">
                     </ComboBox>
-                    <Button Margin="5 0 0 0"
+
+                    <StackPanel Orientation="Horizontal">
+                        <Button Margin="0 5 0 0" MaxWidth="150" HorizontalAlignment="Left"
                         Command="{Binding SetInputFromHistoryButton}"
-                    CommandParameter="{Binding ElementName=History, Path=SelectedItem}"
-                    >Use History</Button>
+                        CommandParameter="{Binding ElementName=History, Path=SelectedItem}"
+                    >Use History As Source</Button>
+                        <Button Margin="5 5 0 0" MaxWidth="150" HorizontalAlignment="Left"
+                        Command="{Binding SetTargetFromHistoryButton}"
+                        CommandParameter="{Binding ElementName=History, Path=SelectedItem}"
+                    >Use History As Target</Button>
+                        <Button Margin="5 5 0 0" MaxWidth="150" 
+                                Command="{Binding ResetHistoryButton}"
+                                >Reset History</Button>
+                    </StackPanel>
                 </StackPanel>
 
                 <!-- SourceFolder list -->
@@ -202,10 +214,11 @@
                     <!-- Selected Files Handle -->
                     <StackPanel Orientation="Horizontal" Margin="0 20 0 0">
                         <Button Command="{Binding OpenFileButton}">Open File</Button>
-                        <TextBlock Margin="30 0 10 0" >Use Notepad++:</TextBlock>
-                        <CheckBox Margin="0 0 25 0" IsChecked="{Binding Path=SelectUseNPP, Mode=TwoWay}"/>
+                        <TextBlock Margin="10 0 10 0" >Use Notepad++:</TextBlock>
+                        <CheckBox Margin="0 0 35 0" IsChecked="{Binding Path=SelectUseNPP, Mode=TwoWay}"/>
                         <Button Command="{Binding Path=CopyAllButton}">Copy All</Button>
-                        <Button Command="{Binding Path=CopySelectedButton}"
+                        <Button Margin="10 0 0 0"
+                            Command="{Binding Path=CopySelectedButton}"
                                 CommandParameter="{Binding ElementName=FoundFiles, Path=SelectedItems}">
                             Copy Selected
                         </Button>
@@ -221,7 +234,7 @@
                     </StackPanel>
                     <StackPanel Orientation="Horizontal">
                         <TextBox Text="{Binding Path=InputTargetFolder}" MinWidth="200"/>
-                        <Button Margin="5 0 0 0"
+                        <Button Margin="5 0 0 0" MinWidth="30"
                             Command="{Binding OpenTargetFolderButton}">...</Button>
                     </StackPanel>
                 </StackPanel>
